# hw05

./: .hlint.yaml  Main.hs  RegExp.hs  Sequence.hs  hw05.cabal  stack.yaml
