name:                hw05
version:             0.1.0.0
synopsis:            Homework assignment for CIS 552
homepage:            https://www.cis.upenn.edu/~cis552/current/index.html
license:             OtherLicense
license-file:        LICENSE
author:              University of Pennsylvania
maintainer:          sweirich@cis.upenn.edu
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10


library
  exposed-modules:     Sequence, RegExp
  build-depends:       base >= 4.14
                     , QuickCheck >=2.14
                     , containers >= 0.6
                     , HUnit >= 1.6
                     , random >= 1.2
  default-language:    Haskell2010
  ghc-options:         -Wincomplete-patterns  

executable hw05
  main-is:             Main.hs
  other-modules:       Sequence, RegExp
  build-depends:       base >= 4.14 
                     , QuickCheck >= 2.14
                     , containers >= 0.6
                     , HUnit >= 1.6
                     , random >= 1.2
  default-language:    Haskell2010
  ghc-options:         -Wincomplete-patterns -Wno-orphans
